add data ingetion pipline

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,13 @@ services:
   mongo1:
     image: mongo:5
     container_name: llm-twin-mongo1
-    command: ["--replSet", "my-replica-set", "--bind_ip_all", "--port", "30001"]
+    command: ["--replSet", "future-market-replica-set", "--bind_ip_all", "--port", "30001"]
     volumes:
       - mongo-replica-1-data:/data/db
     ports:
       - "30001:30001"
     healthcheck:
-      test: test $$(echo "rs.initiate({_id:'my-replica-set',members:[{_id:0,host:\"mongo1:30001\"},{_id:1,host:\"mongo2:30002\"},{_id:2,host:\"mongo3:30003\"}]}).ok || rs.status().ok" | mongo --port 30001 --quiet) -eq 1
+      test: test $$(echo "rs.initiate({_id:'future-market-replica-set',members:[{_id:0,host:\"mongo1:30001\"},{_id:1,host:\"mongo2:30002\"},{_id:2,host:\"mongo3:30003\"}]}).ok || rs.status().ok" | mongo --port 30001 --quiet) -eq 1
       interval: 10s
       start_period: 30s
     restart: always
@@ -16,7 +16,7 @@ services:
   mongo2:
     image: mongo:5
     container_name: llm-twin-mongo2
-    command: ["--replSet", "my-replica-set", "--bind_ip_all", "--port", "30002"]
+    command: ["--replSet", "future-market-replica-set", "--bind_ip_all", "--port", "30002"]
     volumes:
       - mongo-replica-2-data:/data/db
     ports:
@@ -26,7 +26,7 @@ services:
   mongo3:
     image: mongo:5
     container_name: llm-twin-mongo3
-    command: ["--replSet", "my-replica-set", "--bind_ip_all", "--port", "30003"]
+    command: ["--replSet", "future-market-replica-set", "--bind_ip_all", "--port", "30003"]
     volumes:
       - mongo-replica-3-data:/data/db
     ports:
