--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = ""  # Set empty to disable packaging
+name = ""  
 version = "0.1.0"
 description = ""
 authors = ["Yordanos Wuletaw <yordanoswuletaw@gmail.com>"]
@@ -13,6 +13,7 @@ pydantic = ">=2.10.6,<3.0.0"
 requests = ">=2.32.3,<3.0.0"
 pandas = ">=2.2.3,<3.0.0"
 pydantic-settings = ">=2.8.1,<3.0.0"
+pymongo = "^4.11.2"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
