--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,13 +7,18 @@ package-mode = false
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.11"
+python = ">=3.9,<4.0"
 structlog = ">=25.2.0,<26.0.0"
 pydantic = ">=2.10.6,<3.0.0"
 requests = ">=2.32.3,<3.0.0"
 pandas = ">=2.2.3,<3.0.0"
 pydantic-settings = ">=2.8.1,<3.0.0"
 pymongo = "^4.11.2"
+beautifulsoup4 = "^4.13.3"
+selenium = "^4.29.0"
+webdriver-manager = "^4.0.2"
+langchain = "^0.3.20"
+langchain-google-vertexai = "^2.0.15"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
