--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ selenium = "^4.29.0"
 webdriver-manager = "^4.0.2"
 langchain = "^0.3.20"
 langchain-google-vertexai = "^2.0.15"
+aiohttp = "^3.11.14"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
