--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ webdriver-manager = "^4.0.2"
 langchain = "^0.3.20"
 langchain-google-vertexai = "^2.0.15"
 aiohttp = "^3.11.14"
+pika = "^1.3.2"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
