--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,12 @@ langchain = "^0.3.20"
 langchain-google-vertexai = "^2.0.15"
 aiohttp = "^3.11.14"
 pika = "^1.3.2"
+qdrant-client = "^1.13.3"
+langchain-core = "^0.3.49"
+langchain-community = "^0.3.20"
+bytewax = "0.18.2"
+torch = "2.2.2"
+sentence-transformers = "^4.0.1"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
